// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pattern-editor-field Renders \`pattern-editor-field\` with advanced tab 1`] = `
<div
  class="layout column"
>
  <!---->
  <div
    class="v-tabs"
  >
    <div
      class="v-tabs__bar theme--light"
    >
      <transition-stub
        name="fade-transition"
      />
      <div
        class="v-tabs__wrapper"
      >
        <div
          class="v-tabs__container v-tabs__container--centered"
        >
          <div
            class="v-tabs__slider-wrapper"
            style="transition: none;"
          >
            <div
              class="v-tabs__slider primary"
            />
          </div>
          <div
            class="v-tabs__div"
          >
            <a
              class="v-tabs__item"
              href="#simple"
            >
              Simple editor
            </a>
          </div>
          <div
            class="v-tabs__div"
          >
            <a
              class="v-tabs__item v-tabs__item--active"
              href="#advanced"
            >
              Advanced editor
            </a>
          </div>
        </div>
      </div>
      <transition-stub
        name="fade-transition"
      />
    </div>
    <div
      class="v-window"
    >
      <div
        class="v-window__container"
      >
        <transition-stub
          name="v-window-x-transition"
        >
          <div
            class="v-window-item"
            style="display: none;"
          >
            <pattern-groups-field-stub
              attributes=""
              class="mt-2"
              groups=""
              name="patterns.groups"
            />
          </div>
        </transition-stub>
        <transition-stub
          name="v-window-x-transition"
        >
          <div
            class="v-window-item"
            style=""
          >
            <pattern-advanced-editor-field-stub
              attributes=""
              disabled="true"
              name="patterns.json"
              value=""
            />
          </div>
        </transition-stub>
      </div>
    </div>
  </div>
  <div
    class="layout row align-center justify-end"
  >
    <!---->
    <!---->
  </div>
  <div
    class="flex"
  >
    <!---->
    <transition-stub
      name="fade-transition"
    >
      <div
        class="v-alert warning"
        style="display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light v-alert__icon"
        >
          priority_high
        </i>
        <div>
          <span>
            The patterns you've defined targets about 0 items. It can affect performance, are you sure ?
          </span>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`pattern-editor-field Renders \`pattern-editor-field\` with custom props 1`] = `
<div
  class="layout column"
>
  <c-pattern-field-stub
    class="mb-2"
    disabled="true"
    required="required"
    return-object="return-object"
    type="alarm"
    value="pattern-id"
  />
  <div
    class="v-tabs"
  >
    <div
      class="v-tabs__bar theme--light"
    >
      <transition-stub
        name="fade-transition"
      />
      <div
        class="v-tabs__wrapper"
      >
        <div
          class="v-tabs__container v-tabs__container--centered"
        >
          <div
            class="v-tabs__slider-wrapper"
            style="transition: none;"
          >
            <div
              class="v-tabs__slider primary"
            />
          </div>
          <div
            class="v-tabs__div"
          >
            <a
              class="v-tabs__item v-tabs__item--active"
              href="#simple"
            >
              Simple editor
            </a>
          </div>
          <div
            class="v-tabs__div"
          >
            <a
              class="v-tabs__item"
              href="#advanced"
            >
              Advanced editor
            </a>
          </div>
        </div>
      </div>
      <transition-stub
        name="fade-transition"
      />
    </div>
    <div
      class="v-window"
    >
      <div
        class="v-window__container"
      >
        <transition-stub
          name=""
        >
          <div
            class="v-window-item"
          >
            <pattern-groups-field-stub
              attributes="[object Object]"
              class="mt-2"
              disabled="true"
              groups="[object Object]"
              name="name.groups"
              readonly="true"
              required="true"
              type="alarm"
            />
          </div>
        </transition-stub>
        <transition-stub
          name=""
        >
          <div
            class="v-window-item"
            style="display: none;"
          />
        </transition-stub>
      </div>
    </div>
  </div>
  <!---->
</div>
`;

exports[`pattern-editor-field Renders \`pattern-editor-field\` with default props 1`] = `
<div
  class="layout column"
>
  <!---->
  <div
    class="v-tabs"
  >
    <div
      class="v-tabs__bar theme--light"
    >
      <transition-stub
        name="fade-transition"
      />
      <div
        class="v-tabs__wrapper"
      >
        <div
          class="v-tabs__container v-tabs__container--centered"
        >
          <div
            class="v-tabs__slider-wrapper"
            style="transition: none;"
          >
            <div
              class="v-tabs__slider primary"
            />
          </div>
          <div
            class="v-tabs__div"
          >
            <a
              class="v-tabs__item v-tabs__item--active"
              href="#simple"
            >
              Simple editor
            </a>
          </div>
          <div
            class="v-tabs__div"
          >
            <a
              class="v-tabs__item"
              href="#advanced"
            >
              Advanced editor
            </a>
          </div>
        </div>
      </div>
      <transition-stub
        name="fade-transition"
      />
    </div>
    <div
      class="v-window"
    >
      <div
        class="v-window__container"
      >
        <transition-stub
          name=""
        >
          <div
            class="v-window-item"
          >
            <pattern-groups-field-stub
              attributes=""
              class="mt-2"
              groups=""
              name="patterns.groups"
            />
          </div>
        </transition-stub>
        <transition-stub
          name=""
        >
          <div
            class="v-window-item"
            style="display: none;"
          />
        </transition-stub>
      </div>
    </div>
  </div>
  <div
    class="layout row align-center justify-end"
  >
    <!---->
    <!---->
  </div>
  <div
    class="flex"
  >
    <!---->
    <transition-stub
      name="fade-transition"
    >
      <div
        class="v-alert warning"
        style="display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light v-alert__icon"
        >
          priority_high
        </i>
        <div>
          <span>
            The patterns you've defined targets about 0 items. It can affect performance, are you sure ?
          </span>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;
